--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@
   height: 80%;
   margin: 20px;
   background-color: white;
-  border-radius: 2px;
+  border-radius: 4px;
+  overflow:scroll;
 }
 
 .dropable-questions-list{
@@ -32,7 +33,8 @@
   height: 80%;
   margin: 20px;
   background-color: white;
-  border-radius: 2px;
+  border-radius: 4px;
+  overflow:scroll;
 }
 
 .draggablelist{
